--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,6 @@ workflows:
             - run: npm run build
             - aws-s3/copy:
                 from: dist/
-                to: s3://myke-circle-ci
+                to: s3://mybucket
                 arguments: --recursive
                 
